--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
     <main>
       <div class="page-container">
       <h2>Resume</h2>
-      <embed src="../resources/Resume.pdf" type="application/pdf" width="100%" height="700px" />
+      <embed src="../resources/TraceDavis.pdf" type="application/pdf" width="100%" height="700px" />
 
       <!-- Optional download link -->
       <p class="alt-contact">
